# PokerOnline

./: .eslintrc.json  .gitignore  Cargo.toml  next.config.mjs  overrides.d.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
prisma/: schema.prisma
prisma/migrations/20230126071805_initial/: migration.sql
public/: card.glb  chip.glb
src/: dev.mjs  env.mjs  socket.ts
src/code/: access.ts  action.ts  bot.ts  cards.ts  chips.ts  constants.ts  disconnect.ts  dynput.ts  game_data.ts  infinite_array.ts  mp_visual_game_state.ts  pusher.ts  timer_obj.ts  user_data.ts
src/code/classes/: game_instance.ts  mp_game_state.ts  mp_lobby.ts  mp_user.ts  sp_game_state.ts
src/code/formgen/: example.tsx  form_schema.ts
src/component3/: card.tsx
src/components/: btn.tsx  dark_mode_toggle.tsx  layout.tsx  multi_player.tsx  multiplayer.tsx  single_player.tsx  table.tsx  table_old.tsx  timer.tsx  warnclose.tsx
src/constants/: cards.ts  table_state.ts
src/datatypes/: cards.ts  table_state.ts
src/env/: client.mjs  schema.mjs  server.mjs
src/pages/: _app.tsx  create.tsx  game.tsx  home.tsx  index.tsx  play.tsx  settings.tsx  social.tsx  sp_game.tsx  test.tsx
src/rlibs/socket/: Cargo.toml
src/rlibs/socket/src/: main.rs
src/scripts/: access.ts  card_tuple.ts  cards.ts  constants.ts  create_deck.ts  game_data.ts  mp_visual_game_state.ts  pusher.ts  table_state.ts  user_data.ts
src/server/: auth.ts  db.ts  uploadthing.ts.txt
src/styles/: globals.css
src/utils/: common.ts  get_properties.ts  json_util.ts  jsonify.ts  use_rerender.ts
(+22 files in other folders)
