[package]
name = "socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
reqwest = "0.11.17"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
url = "2.3.1"
